# OTPeek

./: .gitignore  Directory.Build.props  OtpAuthenticator.Windows.sln  Otpeek.Windows.sln  README.md  check_crash.ps1  check_extensions.ps1  check_package.ps1  check_widget.ps1  diagnose.ps1  diagnose_app.ps1  install.sh  install_msix.ps1  run_widget.ps1  test_widget.ps1
.github/workflows/: ci.yml  pages.yml  release-cli.yml
apple/: ExportOptions.plist  project.yml
apple/OtpAuthenticator/: ContentView.swift  Info-iOS.plist  Info-macOS.plist  OtpAuthenticator.entitlements  OtpAuthenticatorApp.swift
apple/OtpAuthenticator.xcodeproj/: project.pbxproj
apple/OtpAuthenticator/Views/: AccountCardView.swift  AccountListView.swift  ImportVaultView.swift  LockView.swift  MenuBarView.swift  OnboardingView.swift  SettingsView.swift
apple/OtpWidgetExtension/: Info.plist  MultiOtpWidget.swift  OtpEntry.swift  OtpTimelineProvider.swift  OtpWidget.swift  OtpWidgetEntryView.swift  OtpWidgetExtension.entitlements  WidgetConfiguration.swift
apple/Otpeek/: ContentView.swift  Info-iOS.plist  Info-macOS.plist  Otpeek.entitlements  OtpeekApp.swift  PrivacyInfo.xcprivacy
apple/Otpeek.xcodeproj/: project.pbxproj
apple/Otpeek/Ads/: AdBannerView.swift
apple/Otpeek/Store/: StoreManager.swift
apple/Otpeek/Views/: AccountCardView.swift  AccountIconView.swift  AccountListView.swift  AddAccountView.swift  EditAccountView.swift  ImportVaultView.swift  LockView.swift  MenuBarView.swift  OnboardingView.swift  QRImageImportView.swift  QRScannerView.swift  SettingsView.swift  WidgetSettingsView.swift
apple/Shared/: AppLock.swift  CloudKitSyncBackend.swift  FaviconProvider.swift  KeychainHelper.swift  OtpGenerator.swift  OtpModelBridge.swift  OtpStore.swift  SharedViews.swift  VaultAccess.swift
apple/fastlane/: .env.example  Appfile  ExportOptions-macOS-Internal.plist  Fastfile  README.md
apple/fastlane/metadata/: copyright.txt
apple/scripts/: build-core.sh
context/: PROJECT_SPEC.md
core/: Cargo.toml
core/crates/otp-cli/: Cargo.toml
core/crates/otp-cli/src/: main.rs
core/crates/otp-cli/tests/: cli.rs
core/crates/otp-core/: Cargo.toml
core/crates/otp-core/src/: base32.rs  lib.rs  types.rs  uri.rs
core/crates/otp-core/tests/: base32_tests.rs  migration_tests.rs  rfc_vectors.rs  uri_tests.rs
core/crates/otp-ffi/: Cargo.toml
core/crates/otp-ffi/src/: lib.rs
core/crates/otp-sync/: Cargo.toml
core/crates/otp-sync/src/: lib.rs
core/crates/otp-sync/tests/: sync.rs
core/crates/otp-vault/: Cargo.toml
core/crates/otp-vault/examples/: gen_fixture.rs
core/crates/otp-vault/src/: lib.rs
core/crates/otp-vault/tests/: vault.rs
core/crates/otpeek-cli/: Cargo.toml
core/crates/otpeek-cli/src/: main.rs
core/crates/otpeek-cli/tests/: cli.rs
core/crates/otpeek-core/: Cargo.toml
core/crates/otpeek-core/src/: algorithm.rs  lib.rs  migration.rs
core/crates/otpeek-core/tests/: base32_tests.rs  migration_tests.rs  rfc_vectors.rs  uri_tests.rs
core/crates/otpeek-ffi/: Cargo.toml
core/crates/otpeek-ffi/src/: lib.rs
core/crates/otpeek-sync/: Cargo.toml
core/crates/otpeek-sync/src/: lib.rs
core/crates/otpeek-sync/tests/: sync.rs
core/crates/otpeek-vault/: Cargo.toml
core/crates/otpeek-vault/examples/: gen_fixture.rs
core/crates/otpeek-vault/src/: lib.rs
core/crates/otpeek-vault/tests/: vault.rs
core/crates/otpeek-vault/tests/fixtures/: vault-v2.otpvault
docs/: ARCHITECTURE.md  BACKUP_FORMAT.md  DATA_FORMAT.md  RELEASE.md  SYNC.md  TESTING.md
shared/: README.md
tests/OtpAuthenticator.Core.Tests/: AppSettingsTests.cs  OtpAuthenticator.Core.Tests.csproj  SettingsServiceTests.cs
tests/Otpeek.Core.Tests/: AppSettingsTests.cs  Otpeek.Core.Tests.csproj  SettingsServiceTests.cs
website/: index.html  privacy.html  support.html
website/assets/: demo.js  site.css
website/ko/: index.html  privacy.html  support.html
widgets/otpeek/: README.md  widget.json
windows/: README.md  RELEASE-README.txt
windows/OtpAuthenticator.App/: App.xaml.cs  OtpAuthenticator.App.csproj  Package.appxmanifest
windows/OtpAuthenticator.App/BundleArtifacts/: x64.txt
windows/OtpAuthenticator.App/ViewModels/: AccountEditViewModel.cs  AccountItemViewModel.cs  AccountListViewModel.cs  MainViewModel.cs  QrScannerViewModel.cs  SettingsViewModel.cs  TrayPopupViewModel.cs
windows/OtpAuthenticator.App/Views/: AccountEditView.xaml.cs  BackupPage.xaml.cs  MainWindow.xaml.cs  ManualAddDialog.xaml.cs  QrScannerDialog.xaml.cs  SettingsPage.xaml  (+1 more)
windows/OtpAuthenticator.Core/: OtpAuthenticator.Core.csproj
windows/OtpAuthenticator.Core.Windows/: OtpAccountExtensions.cs  OtpAuthenticator.Core.Windows.csproj  SecretGenerator.cs
windows/OtpAuthenticator.Interop/: OtpAuthenticator.Interop.csproj  uniffi.toml
windows/OtpAuthenticator.Widget/: OtpAuthenticator.Widget.csproj  OtpWidgetDataProvider.cs  WidgetProvider.cs
windows/Otpeek.App/: App.xaml  App.xaml.cs  Otpeek.App.csproj  Package.appxmanifest  app.manifest
windows/Otpeek.Core/: Otpeek.Core.csproj
windows/Otpeek.Core.Windows/: OtpAccountExtensions.cs  Otpeek.Core.Windows.csproj  SecretGenerator.cs
windows/Otpeek.Interop/: Otpeek.Interop.csproj  uniffi.toml
windows/Otpeek.Widget/: OtpWidgetDataProvider.cs  Otpeek.Widget.csproj  Program.cs  WidgetDiagnostics.cs  WidgetProvider.cs  app.manifest
windows/scripts/: generate-bindings.ps1  install-release.ps1  package-msix.ps1
(+85 files in other folders)
