[workspace]
resolver = "2"
members = [
    "crates/otpeek-core",
    "crates/otpeek-vault",
    "crates/otpeek-sync",
    "crates/otpeek-ffi",
    "crates/otpeek-cli",
]

[workspace.package]
version = "2.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
data-encoding = "2"
url = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
fd-lock = "4"
ureq = "2"
uniffi = "0.29"
clap = { version = "4", features = ["derive"] }
keyring = "3"
rpassword = "7"

[profile.release]
lto = "thin"
strip = "symbols"
