[package]
name = "otp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
data-encoding.workspace = true
url.workspace = true

[dev-dependencies]
data-encoding.workspace = true
