[package]
name = "otp-ffi"
version.workspace = true
edition.workspace = true

[lib]
name = "otp_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
otp-core = { path = "../otp-core" }
otp-vault = { path = "../otp-vault" }
otp-sync = { path = "../otp-sync" }
uniffi = { workspace = true, features = ["cli"] }
thiserror.workspace = true
uuid.workspace = true
