[package]
name = "otpeek-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "otpeek"
path = "src/main.rs"

[dependencies]
otpeek-core = { path = "../otpeek-core" }
otpeek-vault = { path = "../otpeek-vault" }
otpeek-sync = { path = "../otpeek-sync", features = ["webdav"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true
keyring = { workspace = true, features = ["apple-native", "windows-native", "sync-secret-service"] }
rpassword.workspace = true
uuid.workspace = true
anyhow = "1"
dirs = "5"
toml = "0.8"
comfy-table = "7"
qrcode = { version = "0.14", default-features = false }
arboard = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
