[package]
name = "otpeek-vault"
version.workspace = true
edition.workspace = true

[dependencies]
otpeek-core = { path = "../otpeek-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
fd-lock.workspace = true
uuid.workspace = true
base64 = "0.22"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }

[dev-dependencies]
aes-gcm.workspace = true
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2.workspace = true
rand.workspace = true
